--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     }
   },
   "dependencies": {
+    "argon2": "^0.28.3",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.2",
+    "joi": "^17.5.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
   },
